--- a/index.html
+++ b/index.html
@@ -800,24 +800,24 @@
                     <li class="footer-item">
                         <h3 class="footer-link-title">Социальные сети</h3>
                     </li>
-                    <li class="footer-item"><a href="#" target="_blank" class="footer-link">Telegram</a></li>
-                    <li class="footer-item"><a href="#" target="_blank" class="footer-link">VK</a></li>
-                    <li class="footer-item"><a href="#" target="_blank" class="footer-link">Habr</a></li>
-                    <li class="footer-item"><a href="#" target="_blank" class="footer-link">YouTube</a></li>
+                    <li class="footer-item"><a href="#" target="_blank" class="footer-link hoverMain">Telegram</a></li>
+                    <li class="footer-item"><a href="#" target="_blank" class="footer-link hoverMain">VK</a></li>
+                    <li class="footer-item"><a href="#" target="_blank" class="footer-link hoverMain">Habr</a></li>
+                    <li class="footer-item"><a href="#" target="_blank" class="footer-link hoverMain">YouTube</a></li>
                 </ul>
                 <ul class="footer-list-2">
                     <li class="footer-item">
                         <h3 class="footer-link-title">Направления работы</h3>
                     </li>
-                    <li class="footer-item"><a href="#" class="footer-link">Архитектура и проектирование</a></li>
-                    <li class="footer-item"><a href="#" class="footer-link">Эффективная доставка приложений (DevOps)</a>
+                    <li class="footer-item"><a href="#" class="footer-link hoverMain">Архитектура и проектирование</a></li>
+                    <li class="footer-item"><a href="#" class="footer-link hoverMain">Эффективная доставка приложений (DevOps)</a>
                     </li>
-                    <li class="footer-item"><a href="#" class="footer-link">SRE</a></li>
-                    <li class="footer-item"><a href="#" class="footer-link">Данные</a></li>
-                    <li class="footer-item"><a href="#" class="footer-link">ML</a></li>
-                    <li class="footer-item"><a href="#" class="footer-link">Развёртывание и поддержка приложений</a>
+                    <li class="footer-item"><a href="#" class="footer-link hoverMain">SRE</a></li>
+                    <li class="footer-item"><a href="#" class="footer-link hoverMain">Данные</a></li>
+                    <li class="footer-item"><a href="#" class="footer-link hoverMain">ML</a></li>
+                    <li class="footer-item"><a href="#" class="footer-link hoverMain">Развёртывание и поддержка приложений</a>
                     </li>
-                    <li class="footer-item"><a href="#" class="footer-link">Развитие и оптимизация инфраструктуры</a>
+                    <li class="footer-item"><a href="#" class="footer-link hoverMain">Развитие и оптимизация инфраструктуры</a>
                     </li>
                 </ul>
             </div>
@@ -825,18 +825,18 @@
             <div class="footer-row-2">
                 <div class="footer-appeal">
                     <div class="footer-appeal-box">
-                        <a href="#" class="footer-appeal-email">info@fevlake.com</a>
-                        <a href="#" class="footer-appeal-number">+7 (495) 123 45 67</a>
+                        <a href="#" class="footer-appeal-email hoverMain">info@fevlake.com</a>
+                        <a href="#" class="footer-appeal-number hoverMain">+7 (495) 123 45 67</a>
                     </div>
                     <ul class="footer-bottom-list">
-                        <li class="footer-bottom-item"><a href="#" class="footer-bottom-link">Политика
+                        <li class="footer-bottom-item"><a href="#" class="footer-bottom-link hoverMain">Политика
                                 конфиденциальности</a></li>
-                        <li class="footer-bottom-item"><a href="#" class="footer-bottom-link">Публичная оферта</a></li>
-                        <li class="footer-bottom-item"><a href="#" class="footer-bottom-link">Пользовательское
+                        <li class="footer-bottom-item"><a href="#" class="footer-bottom-link hoverMain">Публичная оферта</a></li>
+                        <li class="footer-bottom-item"><a href="#" class="footer-bottom-link hoverMain">Пользовательское
                                 соглашение</a></li>
-                        <li class="footer-bottom-item"><a href="#" class="footer-bottom-link">Согласие на обработку
+                        <li class="footer-bottom-item"><a href="#" class="footer-bottom-link hoverMain">Согласие на обработку
                                 персональных данных</a></li>
-                        <li class="footer-bottom-item"><a href="#" class="footer-bottom-link">Согласие на получение
+                        <li class="footer-bottom-item"><a href="#" class="footer-bottom-link hoverMain">Согласие на получение
                                 рекламных материалов</a></li>
                     </ul>
                 </div>
@@ -853,7 +853,6 @@
                 <p class="years">2024</p>
             </div>
         </div>
-
     </footer>
     <!-- footer end -->
 
