--- a/service.html
+++ b/service.html
@@ -1276,7 +1276,7 @@
                         fill="#F8F7F7" />
                 </svg>
 
-                <div class="workLeft">
+                <!-- <div class="workLeft">
                     <h3 class="workLeftTitle">
                         <span>01</span>
                         Архитектура и проектирование, максимально учитывающие задачи бизнеса
@@ -1305,11 +1305,13 @@
                         <span>07</span>
                         Развитие и оптимизация инфраструктуры
                     </h3>
-                </div>
+
+                </div> -->
+                <div class="swiper-pagination4 workLeft"></div>
                 <div class="workRight">
                     <div class="workRightWhite">
                         <div class="workBtns">
-                            <button class="swiper-button-prev3 workLeftBtn workBtn">
+                            <button class="swiper-button-prev4 workLeftBtn workBtn">
                                 <svg width="24" height="14" viewBox="0 0 24 14" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -1320,7 +1322,7 @@
                                         fill="#D84F54" />
                                 </svg>
                             </button>
-                            <button class="swiper-button-next3 workRightBtn workBtn">
+                            <button class="swiper-button-next4 workRightBtn workBtn">
                                 <svg width="24" height="14" viewBox="0 0 24 14" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -2585,24 +2587,24 @@
                     <li class="footer-item">
                         <h3 class="footer-link-title">Социальные сети</h3>
                     </li>
-                    <li class="footer-item"><a href="#" target="_blank" class="footer-link">Telegram</a></li>
-                    <li class="footer-item"><a href="#" target="_blank" class="footer-link">VK</a></li>
-                    <li class="footer-item"><a href="#" target="_blank" class="footer-link">Habr</a></li>
-                    <li class="footer-item"><a href="#" target="_blank" class="footer-link">YouTube</a></li>
+                    <li class="footer-item"><a href="#" target="_blank" class="footer-link hoverMain">Telegram</a></li>
+                    <li class="footer-item"><a href="#" target="_blank" class="footer-link hoverMain">VK</a></li>
+                    <li class="footer-item"><a href="#" target="_blank" class="footer-link hoverMain">Habr</a></li>
+                    <li class="footer-item"><a href="#" target="_blank" class="footer-link hoverMain">YouTube</a></li>
                 </ul>
                 <ul class="footer-list-2">
                     <li class="footer-item">
                         <h3 class="footer-link-title">Направления работы</h3>
                     </li>
-                    <li class="footer-item"><a href="#" class="footer-link">Архитектура и проектирование</a></li>
-                    <li class="footer-item"><a href="#" class="footer-link">Эффективная доставка приложений (DevOps)</a>
+                    <li class="footer-item"><a href="#" class="footer-link hoverMain">Архитектура и проектирование</a></li>
+                    <li class="footer-item"><a href="#" class="footer-link hoverMain">Эффективная доставка приложений (DevOps)</a>
                     </li>
-                    <li class="footer-item"><a href="#" class="footer-link">SRE</a></li>
-                    <li class="footer-item"><a href="#" class="footer-link">Данные</a></li>
-                    <li class="footer-item"><a href="#" class="footer-link">ML</a></li>
-                    <li class="footer-item"><a href="#" class="footer-link">Развёртывание и поддержка приложений</a>
+                    <li class="footer-item"><a href="#" class="footer-link hoverMain">SRE</a></li>
+                    <li class="footer-item"><a href="#" class="footer-link hoverMain">Данные</a></li>
+                    <li class="footer-item"><a href="#" class="footer-link hoverMain">ML</a></li>
+                    <li class="footer-item"><a href="#" class="footer-link hoverMain">Развёртывание и поддержка приложений</a>
                     </li>
-                    <li class="footer-item"><a href="#" class="footer-link">Развитие и оптимизация инфраструктуры</a>
+                    <li class="footer-item"><a href="#" class="footer-link hoverMain">Развитие и оптимизация инфраструктуры</a>
                     </li>
                 </ul>
             </div>
@@ -2610,18 +2612,18 @@
             <div class="footer-row-2">
                 <div class="footer-appeal">
                     <div class="footer-appeal-box">
-                        <a href="#" class="footer-appeal-email">info@fevlake.com</a>
-                        <a href="#" class="footer-appeal-number">+7 (495) 123 45 67</a>
+                        <a href="#" class="footer-appeal-email hoverMain">info@fevlake.com</a>
+                        <a href="#" class="footer-appeal-number hoverMain">+7 (495) 123 45 67</a>
                     </div>
                     <ul class="footer-bottom-list">
-                        <li class="footer-bottom-item"><a href="#" class="footer-bottom-link">Политика
+                        <li class="footer-bottom-item"><a href="#" class="footer-bottom-link hoverMain">Политика
                                 конфиденциальности</a></li>
-                        <li class="footer-bottom-item"><a href="#" class="footer-bottom-link">Публичная оферта</a></li>
-                        <li class="footer-bottom-item"><a href="#" class="footer-bottom-link">Пользовательское
+                        <li class="footer-bottom-item"><a href="#" class="footer-bottom-link hoverMain">Публичная оферта</a></li>
+                        <li class="footer-bottom-item"><a href="#" class="footer-bottom-link hoverMain">Пользовательское
                                 соглашение</a></li>
-                        <li class="footer-bottom-item"><a href="#" class="footer-bottom-link">Согласие на обработку
+                        <li class="footer-bottom-item"><a href="#" class="footer-bottom-link hoverMain">Согласие на обработку
                                 персональных данных</a></li>
-                        <li class="footer-bottom-item"><a href="#" class="footer-bottom-link">Согласие на получение
+                        <li class="footer-bottom-item"><a href="#" class="footer-bottom-link hoverMain">Согласие на получение
                                 рекламных материалов</a></li>
                     </ul>
                 </div>
