--- a/service.html
+++ b/service.html
@@ -104,7 +104,6 @@
             left: 0;
             translate: 0;
         }
-  
     </style>
 </head>
 
@@ -1268,6 +1267,52 @@
     <section class="work">
         <div class="workContainer">
             <h2 class="workTitle">Направления нашей работы</h2>
+            <div class="swiper mySwiper5 workMaxLgHidden">
+                <div class="swiper-wrapper  swiper-wrapper-work">
+                    <div class="swiper-slide">
+                        <h2 class="workLeftTitle">
+                            <span>1</span>
+                            Архитектура и проектирование, максимально учитывающие задачи бизнеса
+                        </h2>
+                    </div>
+                    <div class="swiper-slide">
+                        <h2 class="workLeftTitle">
+                            <span>2</span>
+                            Эффективная доставка приложений (DevOps)
+                        </h2>
+                    </div>
+                    <div class="swiper-slide">
+                        <h2 class="workLeftTitle">
+                            <span>3</span>
+                            SRE
+                        </h2>
+                    </div>
+                    <div class="swiper-slide">
+                        <h2 class="workLeftTitle">
+                            <span>4</span>
+                            Данные
+                        </h2>
+                    </div>
+                    <div class="swiper-slide">
+                        <h2 class="workLeftTitle">
+                            <span>5</span>
+                            ML
+                        </h2>
+                    </div>
+                    <div class="swiper-slide">
+                        <h2 class="workLeftTitle">
+                            <span>6</span>
+                            Развертывание и поддержка внутренних корпоративных приложений
+                        </h2>
+                    </div>
+                    <div class="swiper-slide">
+                        <h2 class="workLeftTitle">
+                            <span>7</span>
+                            Развитие и оптимизация инфраструктуры
+                        </h2>
+                    </div>
+                </div>
+            </div>
             <div class="workCenter">
                 <svg class="workArrow" width="152" height="434" viewBox="0 0 152 434" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
@@ -1276,7 +1321,8 @@
                         fill="#F8F7F7" />
                 </svg>
 
-                <div class="swiper-pagination4 workLeft"></div>
+                <div class="swiper-pagination4 workLeft workLeftLgHidden"></div>
+         
                 <div class="workRight">
                     <div class="workRightWhite">
                         <div class="workBtns">
@@ -2565,15 +2611,19 @@
                     <li class="footer-item">
                         <h3 class="footer-link-title">Направления работы</h3>
                     </li>
-                    <li class="footer-item"><a href="#" class="footer-link hoverMain">Архитектура и проектирование</a></li>
-                    <li class="footer-item"><a href="#" class="footer-link hoverMain">Эффективная доставка приложений (DevOps)</a>
+                    <li class="footer-item"><a href="#" class="footer-link hoverMain">Архитектура и проектирование</a>
+                    </li>
+                    <li class="footer-item"><a href="#" class="footer-link hoverMain">Эффективная доставка приложений
+                            (DevOps)</a>
                     </li>
                     <li class="footer-item"><a href="#" class="footer-link hoverMain">SRE</a></li>
                     <li class="footer-item"><a href="#" class="footer-link hoverMain">Данные</a></li>
                     <li class="footer-item"><a href="#" class="footer-link hoverMain">ML</a></li>
-                    <li class="footer-item"><a href="#" class="footer-link hoverMain">Развёртывание и поддержка приложений</a>
+                    <li class="footer-item"><a href="#" class="footer-link hoverMain">Развёртывание и поддержка
+                            приложений</a>
                     </li>
-                    <li class="footer-item"><a href="#" class="footer-link hoverMain">Развитие и оптимизация инфраструктуры</a>
+                    <li class="footer-item"><a href="#" class="footer-link hoverMain">Развитие и оптимизация
+                            инфраструктуры</a>
                     </li>
                 </ul>
             </div>
@@ -2587,12 +2637,15 @@
                     <ul class="footer-bottom-list">
                         <li class="footer-bottom-item"><a href="#" class="footer-bottom-link hoverMain">Политика
                                 конфиденциальности</a></li>
-                        <li class="footer-bottom-item"><a href="#" class="footer-bottom-link hoverMain">Публичная оферта</a></li>
+                        <li class="footer-bottom-item"><a href="#" class="footer-bottom-link hoverMain">Публичная
+                                оферта</a></li>
                         <li class="footer-bottom-item"><a href="#" class="footer-bottom-link hoverMain">Пользовательское
                                 соглашение</a></li>
-                        <li class="footer-bottom-item"><a href="#" class="footer-bottom-link hoverMain">Согласие на обработку
+                        <li class="footer-bottom-item"><a href="#" class="footer-bottom-link hoverMain">Согласие на
+                                обработку
                                 персональных данных</a></li>
-                        <li class="footer-bottom-item"><a href="#" class="footer-bottom-link hoverMain">Согласие на получение
+                        <li class="footer-bottom-item"><a href="#" class="footer-bottom-link hoverMain">Согласие на
+                                получение
                                 рекламных материалов</a></li>
                     </ul>
                 </div>
@@ -2654,6 +2707,7 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
     <script src="./js/Service.js"></script>
 </body>
 
